--- a/assets/locales/ast_ES.json
+++ b/assets/locales/ast_ES.json
@@ -523,5 +523,6 @@
     "Error during test email: ": "Error during test email: ",
     "Destination of test e-mail": "Destination of test e-mail",
     "Some directories and the files they include must be writable by the web server in order for Chamilo to run (user uploaded files, homepage html files, ...). This might imply a manual change on your server (outside of this interface).": "Dellos direutorios y los ficheros que t\u00e1n dientro tienen de tener establec\u00edos permisos d'escritura nel servidor web pa que Chamilo pueda funcionar (unv\u00edu de ficheros por parte los estudiantes, ficheros html de la p\u00e1xina d'entamu, etc.) Esto igual sup\u00f3n qu'haya que facer cambios na configuraci\u00f3n del servidor que tienen de facese fuera d'esti interfaz)",
-    "A database with the same name already exists. It will be deleted.": "A database with the same name already exists. It will be deleted."
+    "A database with the same name already exists. It will be deleted.": "A database with the same name already exists. It will be deleted.",
+    "When you enter your portal for the first time, the best way to understand it is to create a course with the 'Create course' link in the menu and play around a little.": "Si entra na plataforma por vez primera, la meyor manera d'entender el so funcionamientu ye rexistrase cola opci\u00f3n 'Profesor (crear un cursu)' y siguir les instrucciones."
 }
