--- a/assets/locales/ca_ES.json
+++ b/assets/locales/ca_ES.json
@@ -600,5 +600,6 @@
     "Error during test email: ": "Error during test email: ",
     "Destination of test e-mail": "Destination of test e-mail",
     "Some directories and the files they include must be writable by the web server in order for Chamilo to run (user uploaded files, homepage html files, ...). This might imply a manual change on your server (outside of this interface).": "Alguns directoris i els arxius que contenen han de tenir habilitats els permisos d'escriptura al servidor web per tal que Chamilo pugui funcionar (enviament d'arxius per part dels estudiants, arxius html de la p\u00e0gina principal, ...). Aix\u00f2 pot suposar un canvi manual en el seu servidor (ha de realitzar-se fora d'aquesta interf\u00edcie).",
-    "A database with the same name already exists. It will be deleted.": "A database with the same name already exists. It will be deleted."
+    "A database with the same name already exists. It will be deleted.": "A database with the same name already exists. It will be deleted.",
+    "When you enter your portal for the first time, the best way to understand it is to create a course with the 'Create course' link in the menu and play around a little.": "Quan entreu a la seva plataforma per primer cop, la millora manera de comprendre-la \u00e9s registrar-se amb l'opci\u00f3 'Professor (crea un curs)' i seguir les instruccions."
 }
