--- a/assets/locales/pt_PT.json
+++ b/assets/locales/pt_PT.json
@@ -585,5 +585,6 @@
     "Error during test email: ": "Error during test email: ",
     "Destination of test e-mail": "Destination of test e-mail",
     "Some directories and the files they include must be writable by the web server in order for Chamilo to run (user uploaded files, homepage html files, ...). This might imply a manual change on your server (outside of this interface).": "Algumas directorias/pastas e ficheiros nelas inclu\u00eddas devem permitir serem escritos/gravados pelo servidor web para que o Chamilo possa funcionar correctamente (ficheiros enviados pelos utilizadores, ficheiros de p\u00e1ginas de in\u00edcio html (homepages), ...). Poder\u00e1 implicar uma modifica\u00e7\u00e3o manual no seu servidor (fora deste interface).",
-    "A database with the same name already exists. It will be deleted.": "A database with the same name already exists. It will be deleted."
+    "A database with the same name already exists. It will be deleted.": "A database with the same name already exists. It will be deleted.",
+    "When you enter your portal for the first time, the best way to understand it is to create a course with the 'Create course' link in the menu and play around a little.": "Quando acede ao seu portal pela primeira vez, a melhor maneira de o compreender/explorar \u00e9 registar-se com a op\u00e7\u00e3o 'Criar \u00e1rea de cursos' e seguir as indica\u00e7\u00f5es."
 }
