--- a/assets/locales/sl_SI.json
+++ b/assets/locales/sl_SI.json
@@ -624,5 +624,6 @@
     "Error during test email: ": "Error during test email: ",
     "Destination of test e-mail": "Destination of test e-mail",
     "Some directories and the files they include must be writable by the web server in order for Chamilo to run (user uploaded files, homepage html files, ...). This might imply a manual change on your server (outside of this interface).": "Nekatere mape in datoteke morajo biti zapisljive s strani stre\u017enika, da bi Chamilo normalno deloval (potrebne za prepis datotek, spreminjanje html datotek doma\u010dih strani, ...). Sprememba lahko zahteva ro\u010dno posredovanje oz. nastavitev (na nivoju operacijskega sistema, ne preko tega vmesnika).",
-    "A database with the same name already exists. It will be deleted.": "A database with the same name already exists. It will be deleted."
+    "A database with the same name already exists. It will be deleted.": "A database with the same name already exists. It will be deleted.",
+    "When you enter your portal for the first time, the best way to understand it is to create a course with the 'Create course' link in the menu and play around a little.": "Ko vstopate v portal prvi\u010d, je najbolj\u0161i na\u010din za spoznavanje z delovanjem, da pri\u010dnete z izbiro opcije 'Tvori te\u010daj' in nato sledite navodilom."
 }
