--- a/assets/locales/zh_TW.json
+++ b/assets/locales/zh_TW.json
@@ -468,5 +468,6 @@
     "Error during test email: ": "Error during test email: ",
     "Destination of test e-mail": "Destination of test e-mail",
     "Some directories and the files they include must be writable by the web server in order for Chamilo to run (user uploaded files, homepage html files, ...). This might imply a manual change on your server (outside of this interface).": "\u57f7\u884c\u67d0\u4e9b Chamilo \u529f\u80fd(\u5982\uff1a\u5b78\u751f\u4e0a\u8f09\u6a94\u6848\u3001\u9996\u9801 html \u6a94...)\u6642\uff0c\u90e8\u4efd\u76ee\u9304\u53ca\u5176\u4e2d\u7684\u6a94\u6848\u9808\u8a2d\u5b9a\u70ba\u53ef\u5beb\u5165\u3002\u4f60\u6216\u9808\u8981\u65bc\u4f60\u7684\u4f3a\u670d\u5668\u4e0a(\u672c\u5e73\u53f0\u4ee5\u5916)\u9032\u884c\u624b\u52d5\u8a2d\u5b9a\u3002",
-    "A database with the same name already exists. It will be deleted.": "A database with the same name already exists. It will be deleted."
+    "A database with the same name already exists. It will be deleted.": "A database with the same name already exists. It will be deleted.",
+    "When you enter your portal for the first time, the best way to understand it is to create a course with the 'Create course' link in the menu and play around a little.": "\u7576\u4f60\u9996\u6b21\u9032\u5165\u7684\u5b78\u5712\u6642\uff0c\u77ad\u89e3\u5b83\u7684\u6700\u4f73\u8fa6\u6cd5\u662f\u9078\u8ab2\u7a0b\u5275\u5efa\u8005\u7684\u8eab\u4efd\u8a3b\u518a\uff0c\u7136\u5f8c\u6309\u6b65\u53bb\u505a\u3002"
 }
