Language: Update language terms

--- a/translations/messages.es.po
+++ b/translations/messages.es.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: chamilo\n"
-"PO-Revision-Date: 2025-07-25 15:22+0000\n"
+"PO-Revision-Date: 2025-07-27 21:12+0000\n"
 "Last-Translator: Yannick Warnier <ywarnier@chamilo.org>\n"
 "Language-Team: Spanish <https://translation.chamilo.org/projects/chamilo/"
 "messages/es/>\n"
@@ -29632,3 +29632,38 @@ msgstr "No se ha configurado la opción de notificaciones push."
 
 msgid "Documents deleted"
 msgstr "Documentos eliminados"
+
+#, fuzzy
+msgid "You are about to start using one of the best Open Source e-learning platforms on the market. Like many other Open Source projects, Chamilo is backed up by a large community of students, teachers, developers, content creators and businesses who would like to promote the project better."
+msgstr ""
+"Está a punto de comenzar a utilizar una de las mejores plataformas de e-"
+"learning de código abierto del mercado. Al igual que muchos otros proyectos "
+"de código abierto, Chamilo cuenta con el respaldo de una amplia comunidad de "
+"alumnos, tutores, desarrolladores, creadores de contenido y empresas que "
+"desean promover mejor el proyecto."
+
+msgid "By knowing a little bit more about you, a platform administrator, one of the most important user type for us, who will manage this e-learning system, we will be able to let people know, statistically, how our software is used while respecting your privacy. We will also be able to let you know when we organize events that might be relevant to you or offer additional services that might be of value to your organisation."
+msgstr ""
+"Al conocer un poco más sobre usted, un administrador de plataforma, uno de "
+"los tipos de usuario más importantes para nosotros, que gestionará este "
+"sistema de e-learning, podremos informar a las personas, estadísticamente, "
+"cómo se utiliza nuestro software respetando su privacidad. También podremos "
+"informarle cuando organicemos eventos que puedan ser relevantes para usted o "
+"ofrecer servicios adicionales que puedan ser de valor para su organización."
+
+msgid "By filling this form, you agree that the editor of Chamilo, the %s company, registered in Belgium, and/or members of its network of partners (exclusively Chamilo services providers) might occasionally send you information by e-mail about important events or updates in the Chamilo software or community. This will help the community grow as an organized entity where information flows, with a thorough respect of your time and your privacy."
+msgstr ""
+"Al completar este formulario, usted acepta que el editor de Chamilo, la "
+"empresa %s, registrada en Bélgica, y/o miembros de su red de socios ("
+"exclusivamente proveedores de servicios de Chamilo) puedan ocasionalmente "
+"enviarle información por correo electrónico sobre eventos importantes o "
+"actualizaciones en el software o la comunidad de Chamilo. Esto ayudará a que "
+"la comunidad crezca como una entidad organizada donde fluye la información, "
+"con un profundo respeto por su tiempo y su privacidad."
+
+msgid "Please note that you are NOT REQUIRED to fill this form. If you want to remain anonymous, we will lose the opportunity to offer you all the privileges of being a registered portal administrator, but we will respect your decision. Simply leave this form empty and click Next."
+msgstr ""
+"Tenga en cuenta que NO ES OBLIGATORIO completar este formulario. Si desea "
+"permanecer anónimo, perderemos la oportunidad de ofrecerle todos los "
+"privilegios de ser un administrador de portal registrado, pero respetaremos "
+"su decisión. Simplemente deje este formulario vacío y haga clic en Siguiente."
